# karrolle

./: README.md  pubspec.yaml
.agent/rules/: cdc.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/bridge/: native_api.dart
lib/core/logger/: app_logger.dart
lib/features/engine/presentation/: engine_view.dart
lib/features/presentation_engine/data/repositories/: karrolle_repository_impl.dart
lib/features/presentation_engine/data/sources/: websocket_server.dart
lib/features/presentation_engine/domain/models/: karrolle_element.dart  karrolle_presentation.dart  karrolle_scene.dart  remote_command.dart
lib/features/presentation_engine/domain/repositories/: karrolle_repository.dart
lib/features/presentation_engine/presentation/providers/: presentation_provider.dart
lib/features/presentation_engine/presentation/widgets/: karrolle_player.dart  remote_server_status_card.dart
lib/features/remote_control/data/: websocket_client.dart
lib/features/remote_control/presentation/providers/: remote_connection_provider.dart
lib/features/remote_control/presentation/screens/: remote_connect_screen.dart  remote_control_screen.dart
lib/features/studio/logic/: export_service.dart  history_manager.dart  page_manager.dart  studio_controller.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt
native/include/: engine.h
native/src/: engine.cpp  scene_graph.hpp
native/src/core/: font.hpp  object.hpp  scene.cpp  scene.hpp  utils.hpp
native/src/objects/: ellipse_object.hpp  image_object.hpp  line_object.hpp  rect_object.hpp  text_object.hpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
